2005-03-04  Stipe Tolj  <stolj@wapme.de> 
    * gw/wap-appl.c: added <ip:port> output in info() log line for fetching
      the requested client URL. Thanks to Jonathan for this.
      [Msg-ID: <422880B3.90805@wirelessonenet.com>]

2005-03-02  Stipe Tolj  <stolj@wapme.de> 
    * doc/userguide/userguide.xml: fixed some typos and added sections for
      URL escape codes %m and %M for sms-service group.
    * gw/urltrans.c: adding URL escape codes %m for mclass and %M for mwi
      parameters of our Msg structure. Generally this shall allow to use
      smsc_http (kannel mode) interface to have MO transported transparently
      up via sms-service to an upstream smsbox instance for further processing.

2005-03-01 Andreas Fink <afink@gni.ch>
    * gw/smsc/smsc_at.c: be more friendly to modems which
      are not ready after opening serial port or after AT&F.
      Helps Ericsson T300

2005-03-01 Aarno Syvanen <as@gni.ch>
    * gw/smsc/smsc_at.c: Fixed error messages in "slow modem start patch"

2005-03-01  Stipe Tolj  <stolj@wapme.de> 
    * configure[.in], gw-config.h.in, gwlib/http.c: added option to make
      HTTP/1.1 keep-alive support disabled via optional configure switch 
      --disable-keepalive. Thanks to Jonathan Hauser 
      <jhouser@wirelessonenet.com> for this patch.
      [Msg-ID: <421B8103.7070301@wirelessonenet.com>]

2005-03-01  Stipe Tolj  <stolj@wapme.de> 
    Portability enhancement for non-gcc compilers, no logic change.
    * gw/smsc/smsc_smpp.c: changed gcc specific magic macro __PRETTY_FUNCTION_
      to __func__ that is more generic, because of gw-config.h.in macro
      rule used.
    * readius/radius_pdu.c: remove void NULL void call and enclose into an
      if statement.
      Thanks to Mike Bristrow <mike@urgle.com> for the patch.
      [Msg-ID: <20050218120010.GA17561@urgle.com>]

2005-03-01  Stipe Tolj  <stolj@wapme.de> 
    * configure[.in]: added support to find docbook.dsl file on Debian 